--- a/index.html
+++ b/index.html
@@ -6,27 +6,17 @@
     <script src="bower_components/angular/angular.min.js"></script>
 
 </head>
-<body>
-    
-<div ng-app="practice">
-    <input type="text" ng-model="data.message">
-    <h1>{{data.message}}</h1>
+<body ng-app="practice">
+
     <div ng-controller="firstCtrl">
         <input type="text" ng-model="data.message">
         <h1>{{data.message + " world"}}</h1>
-        <div class="{{data.message}}">
-            <!-- Nothing -->
-        </div>
     </div>
+
     <div ng-controller="secondCtrl">
         <input type="text" ng-model="data.message">
-        <h1>{{data.message + " world"}}</h1>
-        <div class="{{data.message}}">
-            <!-- Nothing -->
-        </div>
+        <h1>{{backwardsMessage(data.message)}}</h1>
     </div>
-</div>
-
 
 
     <script src="controllers.js"></script>
